syntax = "proto3";

service RecuiterServices {
    rpc Register(UserData) returns (RegistrationResponse){};
    rpc OtpVerify(OtpVerifyRequest) returns (OtpVerifyResponse){};
    rpc Login(LoginRequest) returns (LoginResponse){};
    rpc Getall(Empty) returns (GetAllUsersResponse){};
    rpc UpdateStatus(UserData) returns (GetAllUsersResponse){};
    rpc Approval(UserData) returns (GetAllUsersResponse){};
    rpc GetStatus(statusRequest) returns (statusResponse){};
}

message Empty {

}

message UserData {
    string username = 1;
    string email = 2;
    string mobile = 3;
    string password = 4;
    string companyemail = 5;
    string companyName = 6;
    bool isActive = 7;
    bool status = 8;
    string avatar = 9;
    string _id = 10;
}

message RegistrationResponse {
    bool success = 1;
    UserData data = 2;
    string msg = 3;
    string otp = 4 ;
}

message OtpVerifyRequest {
   UserData userdata = 1;
   string otp = 2;
   string enterOtp = 3;
}

message OtpVerifyResponse {
    bool success = 1;
    string message = 2;
    UserData user = 3;

}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    UserData user = 2;
}

message GetAllUsersResponse {
    repeated UserData users = 1;
}

message statusRequest {
  string userId = 1;
}

message statusResponse {
  bool status = 1;
}
